@@ -1,3 +1,15 @@
+---
+
+layout: single
+title: 深入理解Java虚拟机
+permalink: java/deep-in-jvm-diary.html
+
+classes: wide
+
+author: Bob Dong
+
+---
+
 # 前言
 
 原文写于2014年，[链接](https://blog.csdn.net/puma_dong/article/details/19751597)。
@@ -10,7 +22,7 @@
 
 Java和C++之间有一睹由动态内存分配和垃圾收集机制组成的墙，里面的人想出来，外面的人想进去。
 
-在Java里面调用System.gc，会立刻引起一次FullGC和YougGC。
+Java虚拟机的内存管理与垃圾回收，是虚拟机结构体系中最重要的组成部分，对我们程序的性能和稳定性有着非常大的影响。
 
 ## Java内存区域与内存溢出异常
 
@@ -342,7 +354,208 @@ http://www.open-open.com/lib/view/open1324736648468.html
 
 # 调优案例分析与实战
 
+## 高性能硬件上的程序部署策略
 
+**案例：**
+
+场景：在线文档网站，硬件升级(CPU变为4个，内存变为16G)，出现十几分钟停顿十几秒现象
+
+原因：文档序列化产生大量大对象，进入老年代，导致没有在Minor GC清理掉，Full GC耗时导致的停顿现象
+
+解决：硬件分成5个虚拟机，做成集群，用前端负载；结果速度比硬件升级前有较大提升，也不再停顿
+
+**两种方式：**
+
+在高性能硬件上部署程序，主要有两种方式：
+
+1.通过64位JDK来使用大内存
+
+2.实用若干个32位虚拟机建立逻辑集群来利用硬件资源
+
+**结论：**
+
+控制Full GC频率的关键是看应用中绝大多数对象能否符合“朝生夕灭”的原则，即大多数对象的生存时间不应当太长，尤其不能产生成批量的、长生存时间的大对象，这样才能保障老年代空间的稳定；
+
+在大多数网站形式的应用中，主要对象的生存周期都应该是请求级或页面级的，会话级和全局级的长生命对象相对较少。
+
+只要代码合理，应当都能实现在超大堆中正常使用而没有Full GC，这样的话，使用超大堆内存时，网站响应速度才比较有保障。
+
+## 集群间同步导致的内存溢出
+
+**案例：**
+
+场景：6个节点的WebLogic集群，有数据在各个节点间共享，开始存在数据库中，后来改为JbossCache全局缓存
+
+原因：既有JBossCache的缺陷，也有实现方式的缺陷，集群间频繁的写操作，当网络情况不能满足传输要求时，重发数据在内存中不断的堆积，很快就产生了内存溢出
+
+**结论：**
+
+对于部分数据在各个节点共享的场景，使用更为成熟的第三方框架，比如Redis
+
+## 堆外内存导致的溢出错误
+
+**案例：**
+
+场景：2G内存，1G堆内存，发生内存溢出，对内存调大为1.6G，溢出反而更频繁了
+
+解决步骤：利用jstat，发现GC正常，Eden区、Survivor区、老年代、永久代均正常，在内存溢出后从系统日志中找到异常对照，有java.nio.ByteBuffer.allocateDirect
+
+原因：案例使用的CometD1.1.1框架，有大量的NIO操作需要用到DirectMemory
+
+**结论：**
+
+Direct Memory:可通过-XX:MaxDirectMemorySize调整大小，内存不足时抛出OutOfMemoryError或OutOfMemoryError:Direct buffer Memory；
+
+线程堆栈：可通过-Xss调整大小，内存不足时抛出StackOverFlowError（纵向无法分配，即无法分配新的栈帧）或OutOfMemoryError:unable to create native thread（横向无法分配，及无法建立新的线程）；
+
+Socket缓存区：每个Socket连接都有Receive和Send两个缓存区，分别占大约37KB和25KB的内存，连接多的话这块内存占用也比较可观。如果无法分配，则可能抛出IOException:Too many open files异常；
+
+JNI代码：如果代码中使用JNI调用本地代码库，那本地代码库使用的内存也不在堆中；
+
+虚拟机和GC:虚拟机和GC的代码执行也要消耗一定的内存。
+
+## 外部命令导致系统缓慢
+
+**案例：**
+
+场景：大并发压力下，请求缓慢，通过监控，发现CPU使用率很高，并且CPU占用不是程序本身，通常情况下，用户应用的CPU占用应该占主要地位。
+
+解决步骤：通过开发人员找到答案，每个用户请求，时都要执行一个外部Shell获得系统的一些信息。这些Shell脚本是通过Java的Runtime.getRuntime().exec()方法调用的。Java虚拟机执行这个命令的过程是：首先克隆一个和当前虚拟机拥有一样环境变量的进程，再用这个新的进程执行外部命令，最后再退出这个进程。如果频繁执行这个操作，系统的消耗会很大，不仅是CPU，内存的负担也很重。
+
+解决：去掉这个shell脚本的执行，改用Java的API去获取这些信息。
+
+## 服务器JVM进程崩溃
+
+**案例：**
+
+场景；第二个案例的配置，频繁出现集群节点的虚拟机进程自动关闭的现象。
+找出问题：有异常日志，java.net.SocketException:Connection reset，这是一个远程断开连接的异常，通过系统管理员了解到最近和第三方远程OA做过对接。经过测试，发现调用远程WebService长达3分钟才返回，并且返回的结果都是连接中断。
+
+原因：由于系统经常调用远程服务，但是两边服务的速度完全不对等 ，时间越长就累积越多的服务没有调用完，导致在等待的线程和Socket连接越来越多，最终超过虚拟机的承受能力后使得虚拟机的进程崩溃。
+
+**结论：**
+
+及时验证接口服务，尽量在允许的情况下，采用异步消息机制，比如RabbitMQ之类。
+
+# 虚拟机执行系统：类加载、编译和执行
+
+这一部分深入讲解了虚拟机的执行过程，对实际工作中的帮助相对较小，这里只记录下篇章，及一些领悟，不做深入学习。
+
+篇章：《类文件结构》、《虚拟机类加载机制》、《虚拟机字节码执行引擎》、《类加载及执行子系统的案例与实战》、《编译器优化》、《运行期优化》
+
+这些篇章介绍了Class文件格式、类加载及迅疾执行引擎，这些内容是虚拟机中必不可少的部分，了解了虚拟机如何执行程序，才能更好地理解怎样才能写出优秀的代码。
+
+代码编译的结果从本地机器码变为字节码，是存储格式发展的一小步，却是编程语言发展的一大步。
+
+Java语言规范和Java虚拟机规范是分别定义的，这说明任何语言，编译成的字节码只要符合Java虚拟机规范，都可以在Java虚拟机执行，当前这样的语言有：Clojure,Groovy,JRuby,Jython。
+
+Java程序从源码编译成字节码和从字节码编译成本地机器码的过程，Javac字节码编译器与虚拟机内的JIT编译器的执行过程合并起来，其实就等于一个传统的编译器所执行的编译过程。
+
+对Java编译器的深入了解，有助于在工作中分辨哪些代码是编译器可以帮我们处理的，哪些代码需要自己调节以便更适合编译器的优化。
+
+# 高效并发
+
+并发处理的广泛应用是使得Amdahl定律代替摩尔定律成为计算机性能发展源动力的根本原因，也是人类压榨计算机运算能力最有力的武器。
+
+volatile修饰符，当一个变量被定义为volatile后，则此变量对多有线程可见，即新值修改了值后，其他线程立即得知；但是这种类型不是原子性的， 依然做不到线程安全，书中有实例。
+
+immutable的 对象一定是线程安全的，比如String对象。
+
+绝对线程安全的对象几乎没有，书中演示了Vector对象多线程移除，get时获取不到的情况，依然需要对vector对象加锁才保证了正确的结果。Java API中，绝大多数的线程安全类，都是相对线程安全的。
+
+suspend，resume，setIn，setOut，runFinalizersOnExit等有死锁风险，被废弃。
+
+线程安全最常用的实现，就是互斥同步，是阻塞的，利用synchronized。
+
+本书的后面部分，关于虚拟机执行系统的，关于编译优化的，关于高效并发的，和实际编码、架构等技术性工作的相关性相对较低，不进行进一步的深入学习。
+
+# 内存溢出代码示例
+
+## HeapSize OOM -- Java heap space
+
+```java
+
+class HeapOOM {
+        public static void main(String[] args) {
+                java.util.List<String> list = new java.util.ArrayList<String>();
+                while(true) {
+                        list.add("内存溢出啊，内粗溢出啊！");
+                }
+        }
+}
+
+# 执行java -Xmx2m HeapOOM，堆内存瞬间溢出，报错：java.lang.OutOfMemoryError:Java heap space
+```
+
+## HeapSize OOM -- GC over head limit exceeded
+
+```
+import java.util.*;
+class GCOverHead {
+        public final static byte[] DEFAULT_BYTES = new byte[12*1024*1024];
+        public static void main(String[] args) {
+                List<byte[]> temp = new ArrayList<byte[]>();
+                while(true) {
+                        temp.add(new byte[1024*1024]);
+                        if(temp.size()>3) {
+                                temp.clear();
+                        }
+                }
+        }
+}
+```
+
+执行java -XX:+PrintGCDetails -XX:+UseGCOverheadLimit -Xmn5m -Xmx20m GCOverHead ，据说会报java.lang.OutOfMemoryError:GC over head limit exceeded，意思是不断在做Full GC，每次GC完后释放一点点内存，然后一下子就又满了，不断重复，当次数达到一定量，并且平均FULL GC时间达到一定比例时，就会报错；
+
+但是，我的程序一直就无限循环运行，不报错误.
+
+## PermGen OOM
+
+```
+import net.sf.cglib.proxy.Enhancer;
+class ClassPermGenOOM {
+        public static void main(String[] args) {
+                while(true) {
+                        createProxy(ClassPermGenOOM.class);
+                }
+        }
+        public static Object createProxy(Class<?> targetClass) {
+                Enhancer enhancer = new Enhancer();
+                enhancer.setSuperclass(targetClass);
+                enhancer.setUseCache(false);
+                enhancer.setCallback(new MethodInterceptor() {
+                        public Object intercept(Object object,
+                                Method method,Object[] args,
+                                MethodProxy methodProxy) throws Throwable {
+                                return methodProxy.invokeSuper(object,args);
+                        }       
+                });
+                return enhancer.create();
+        }
+}
+
+# 执行java -XX:+TraceClassUnloading -XX:PermSize=10m -XX:MaxPermSize=10 ClassPermGenOOM，会报出java.lang.OutOfMemoryError:PermGen space错误。
+```
+
+## DirectBuffer OOM
+
+```
+
+import java.nio.ByteBuffer;
+class ByteBufferOOM {
+        public static void main(String[] args) {
+                ByteBuffer.allocateDirect(257*1024*1024);
+        }
+}
+
+# 执行java -XX:MaxDirectMemorySize=256m ByteBufferOOM，则会报出错误java.lang.OutOfMemoryError:Direct bufer memory。
+```
+
+## StackOverflowError
+
+栈溢出，无限递归即可。
+
+死递归和死循环不一样，死循环时，栈空间不会递增；而死递归由于需要记录退回的路径，就必须记住递归过程中的方法调用过程，以及每个方法运行过程中的本地变量，这个我们称之为上下文信息，随着内容的增加，就会占用更多的内存空间，JVM是为了控制它的无限制增长，才做了安全检测的处理。
 
 # 后记
 
